@@ -897,6 +897,31 @@ name|i
 operator|++
 control|)
 block|{
+if|if
+condition|(
+operator|!
+name|includeRegionInSplit
+argument_list|(
+name|keys
+operator|.
+name|getFirst
+argument_list|()
+index|[
+name|i
+index|]
+argument_list|,
+name|keys
+operator|.
+name|getSecond
+argument_list|()
+index|[
+name|i
+index|]
+argument_list|)
+condition|)
+block|{
+continue|continue;
+block|}
 name|String
 name|regionLocation
 init|=
@@ -1143,6 +1168,26 @@ block|}
 block|}
 return|return
 name|splits
+return|;
+block|}
+comment|/**    *    *    * Test if the given region is to be included in the InputSplit while splitting    * the regions of a table.    *<p>    * This optimization is effective when there is a specific reasoning to exclude an entire region from the M-R job,    * (and hence, not contributing to the InputSplit), given the start and end keys of the same.<br>    * Useful when we need to remember the last-processed top record and revisit the [last, current) interval for M-R processing,    * continuously. In addition to reducing InputSplits, reduces the load on the region server as well, due to the ordering of the keys.    *<br>    *<br>    * Note: It is possible that<code>endKey.length() == 0</code> , for the last (recent) region.    *<br>    * Override this method, if you want to bulk exclude regions altogether from M-R. By default, no region is excluded( i.e. all regions are included).    *    *    * @param startKey Start key of the region    * @param endKey End key of the region    * @return true, if this region needs to be included as part of the input (default).    *    */
+specifier|protected
+name|boolean
+name|includeRegionInSplit
+parameter_list|(
+specifier|final
+name|byte
+index|[]
+name|startKey
+parameter_list|,
+specifier|final
+name|byte
+index|[]
+name|endKey
+parameter_list|)
+block|{
+return|return
+literal|true
 return|;
 block|}
 comment|/**    * Allows subclasses to get the {@link HTable}.    */
