@@ -421,7 +421,10 @@ Release 0.21.0 - Unreleased
                (Alexey Kovyrin via Stack)
    HBASE-2267  More improvements to the Maven build (Lars Francke via Stack)
    HBASE-2174  Stop from resolving HRegionServer addresses to names using DNS on
-               every heartbeat (Karthik Ranganathan via Stack)
+               every heartbeat (Karthik Ranganathan via Stack) 
+   HBASE-2302  Optimize M-R by bulk excluding regions - less InputSplit-s to
+               avoid traffic on region servers when performing M-R on a subset
+               of the table (Kay Kay via Stack)
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
